XWIKI-21922: Introduce methods to fetch a subset of revisions in XWikiVersioningStoreInterface
* Add new creation method to RevisionCriteriaFactory
* Other small improvements